<resources>
    <string name="app_name">BeckerCinema</string>
    <string name="name_project">BeckerCinema</string>

    <!--MainFragment    -->
    <string name="exit">Выход</string>
    <string name="are_you_really_want">Вы уверены, что хотите закрыть приложение?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <!--bottom menu-->
    <string name="bottom_menu_home">Главная</string>
    <string name="bottom_menu_search">Поиск</string>
    <string name="bottom_menu_profile">Профиль</string>

    <!--onboarding-->
    <string name="onboarding_btn_skip">Пропустить</string>
    <string name="onboarding_description_first">Узнавай\nо премьерах</string>
    <string name="onboarding_description_second">Создавай\nколлекции</string>
    <string name="onboarding_description_third">Делись\nс друзьями</string>

    <!-- Home fragment -->
    <string name="btn_show_all_top">Все</string>
    <string name="btn_show_all_end">Показать все</string>
    <string name="btn_try_again">Попробовать ещё</string>
    <string name="tabsDescriptions">here the indicator pages</string>
    <string name="no_answer">Ой, что-то пошло не так.</string>

    <!-- Film detail fragment -->
    <string name="label_film_actors">В фильме снимались</string>
    <string name="label_film_makers">Над фильмом работали</string>
    <string name="label_film_gallery">Галерея</string>
    <string name="label_film_similar">Похожие фильмы</string>
    <string name="seasons_episodes_count">%s, %s</string>
    <string name="placeholder_series_start_year">_</string>
    <string name="placeholder_series_end_year">н.в.</string>
    <string name="hour_short">ч</string>
    <string name="minutes_short">мин</string>

    <!-- Series seasons/episodes fragment -->
    <string name="label_series_seasons">Сезоны и серии</string>
    <string name="images">images</string>
    <string name="label_season_episodes_count">Сезон</string>
    <string name="season_episode_name">%d серия. %s</string>
    <string name="season_chip_name">%d</string>
    <string name="episodes_count">%d сезон, %s</string>
    <string name="label_filmography">Фильмография</string>
    <string name="search_edittext_hint">Фильмы, актёры, режиссёры</string>

    <!-- Staff detail fragment -->
    <string name="staff_detail_filmography_label">Фильмография</string>
    <string name="staff_detail_best_label">Лучшее</string>
    <string name="staff_detail_filmography_all">К списку</string>
    <string name="facts">Факты: </string>
    <string name="year_of_birth">Год рождения: </string>
    <string name="place_of_birth">Место рождения: </string>

    <!-- Gallery full fragment -->
    <string name="search_trailers">Найти трейлеры</string>
    <string name="title_gallery">Галерея</string>
    <string name="chip_name">%s %d</string>

    <!--Constants    -->
    <string name="steel">кадры</string>
    <string name="shooting">со съемок</string>
    <string name="poster">постеры</string>
    <string name="fan_art">фан-арты</string>
    <string name="promo">промо</string>
    <string name="concept">концепт-арты</string>
    <string name="wallpaper">обои</string>
    <string name="cover">обложки</string>
    <string name="screenshot">скриншоты</string>
    <string name="writer">Сценарист</string>
    <string name="operator">Оператор</string>
    <string name="editor">Монтаж</string>
    <string name="composer">Композитор</string>
    <string name="producer_ussr">Режиссёр СССР</string>
    <string name="translator">Дубляж</string>
    <string name="director">Режиссёр</string>
    <string name="design">Художник-постановщик</string>
    <string name="producer">Продюссер</string>
    <string name="actor">Актёр</string>
    <string name="voice_director">Звукорежиссёр</string>
    <string name="unknown">Неизвестно</string>

    <!-- Search fragment -->
    <string name="search_not_found">К сожалению, по Вашему\nничего не найдено</string>
    <string name="search_btn_retry">Попробуй ещё</string>

    <!-- Search setting fragment -->
    <string name="search_settings_title">Настройки поиска</string>
    <string name="search_settings_label_show">Показывать</string>
    <string name="search_settings_radio_all">Все</string>
    <string name="search_settings_radio_films">Фильмы</string>
    <string name="search_settings_radio_series">Сериалы</string>
    <string name="search_settings_rating_text">от %d до %d</string>
    <string name="search_settings_country_label">Страна</string>
    <string name="search_settings_genre_label">Жанр</string>
    <string name="search_settings_rating_label">Рейтинг</string>
    <string name="search_settings_year_label">Год</string>
    <string name="search_settings_radio_popular">Популярность</string>
    <string name="search_settings_radio_rating">Рейтинг</string>
    <string name="search_settings_radio_date">Дата</string>
    <string name="search_settings_sorting_label">Сортировать</string>
    <string name="search_filters_country_choose">Выберете страну</string>
    <string name="search_filters_countries_default">Все страны</string>
    <string name="search_filters_genres_default">Все жанры</string>
    <string name="apply">Применить</string>
    <string name="watched">Просмотрен</string>
    <string name="marked_watched">Отмечены просмотренными"</string>
    <string name="period">Период</string>
    <string name="period_from">Искать в период с:</string>
    <string name="period_to">Искать в период до:</string>
    <string name="select">Выбрать</string>
    <string name="search_set_datepicker_text">c %d до %d</string>
    <string name="_1998_2017">с 1850 до 3895</string>
    <string name="reset">сброс</string>
    <string name="no_year">Год не указан</string>
    <string name="people">Люди</string>
    <string name="any">любой</string>

    <!--CountryGenreSearchFiltersFragment-->
    <string name="countries">Страны</string>
    <string name="choose_country">Выбери страну</string>
    <string name="genre">Жанры</string>
    <string name="choose_genre">Выбери жанр</string>

    <!--Profile-->
    <string name="collections">Коллекции</string>
    <string name="create_custom_collection">Создать свою коллекцию</string>
    <string name="favorites">Любимые</string>
    <string name="want_to_watch">Хочу посмотреть</string>
    <string name="history">История</string>
    <string name="watched_movies">Просмотренные фильмы</string>
    <string name="interesting_movies">Вам были интересны эти фильмы</string>
    <string name="custom_collection">Custom collection</string>
    <string name="choose_collection_name">Придумайте название для Вашей новой коллекции</string>
    <string name="collection_title">collection title</string>
    <string name="clear_history">Очистить историю</string>

    <!--CollectionHandlerFragment   -->
    <string name="add_to_collection">Добавить в коллекцию</string>
    <string name="to_watch">Хочу посмотреть</string>
    <string name="create_own_collection">Создать свою коллекцию</string>

    <!--Season Adapter-->
    <string name="ofJanuary">января</string>
    <string name="ofFebruary">февраля</string>
    <string name="ofMarch">марта</string>
    <string name="ofApril">апреля</string>
    <string name="ofMay">мая</string>
    <string name="ofJune">июня</string>
    <string name="ofJuly">июля</string>
    <string name="ofAugust">августа</string>
    <string name="ofSeptember">сентября</string>
    <string name="ofOctober">октября</string>
    <string name="ofNovember">ноября</string>
    <string name="ofDecember">декабря</string>

    <!--Common    -->
    <string name="NoData">Нет данных</string>
    <string name="not_specified">Не указан</string>
    <string name="unknown_name">Unknown name</string>

    <!--CategoriesFilms    -->
    <string name="category_best_250">ТОП-250</string>
    <string name="popular_100">Популярное</string>
    <string name="premiers">Премьеры</string>
    <string name="most_await">Самые ожидаемые</string>
    <string name="tv_series">Сериалы</string>
    <string name="biography">Биографии</string>
    <string name="science_fiction">Фантастика</string>
    <string name="cartoons">Мультфильмы</string>

</resources>