<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/onAllMovie"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/bt_datepicker_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/period"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginVertical="16dp"
        android:text="@string/period_from" />

    <com.becker.beckerSkillCinema.presentation.search.datepicker.DatePicker
        android:id="@+id/rangeFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_weight="1"
        app:picker_border_corner_radius="25dp"
        app:picker_border_width="1dp"
        app:picker_start_date="1990"
        app:picker_text_size="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginVertical="16dp"
        android:text="@string/period_to" />

    <com.becker.beckerSkillCinema.presentation.search.datepicker.DatePicker
        android:id="@+id/rangeTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_weight="1"
        app:picker_border_corner_radius="25dp"
        app:picker_border_width="1dp"
        app:picker_start_date="1990"
        app:picker_text_size="15sp" />

    <Button
        android:id="@+id/bt_datepicker_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:enabled="false"
        android:paddingHorizontal="24dp"
        android:text="@string/select" />

</LinearLayout>